updates 'Contacts' to 'Contact' and scrolling margin

--- a/portofolio/src/components/Hero/Hero.css
+++ b/portofolio/src/components/Hero/Hero.css
@@ -50,5 +50,10 @@
             background-color: var(--highlight-color);
             border-radius: 5px;
         }
+
+        #about-btn-link {
+            text-decoration: none;
+            color: white;
+        }
     }
 }
