--- a/portofolio/src/components/Main/Footer/Footer.css
+++ b/portofolio/src/components/Main/Footer/Footer.css
@@ -1,16 +1,15 @@
 .footer-content {
     width: 75%;
     margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 20px;
     border-top: 1px solid black;
-    margin-top: 20px;
+    margin-top: 100px;
+    text-align: center;
 
 
-    .contacts {
+    .contact {
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
         align-items: center;
         padding: 20px;
